# High-Res-FlowWatch

./: Cargo.toml  README.md
assets/: filters.txt  filters2.txt
scripts/: memory_usage.sh  packets_dropped.sh
src/: main.rs  structures.rs  utils.rs
src/structures/: filters.rs  flows.rs  shared_data.rs  stats.rs
