[package]
name = "flowspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Need to run:
# $ sudo setcap cap_net_admin,cap_net_raw=eip target/debug/flowspy
[dependencies]
argparse="*"
"pcap"="*"
etherparse = "0.13"
ctrlc = { version = "3.0", features = ["termination"] }
chrono = "0.4.24"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
